# blast-api

./: .gitignore  README.md  pyproject.toml  test.fa
blast-services/: main.py  utils.py
blast-services/blastTestDB/: testDB.nhr  testDB.nin  testDB.nsd  testDB.nsi  testDB.nsq  testDB_addUIC.nal
client/: client.py
gateway/: UIC00101.1.fa  main.py  rpc_client.py
